--- a/js14_dom-prosject/index.css
+++ b/js14_dom-prosject/index.css
@@ -66,15 +66,15 @@ main.container {
 }
 
 /** --------- IMAGES --------- */
-.selection {
+article.selection {
   display: flex;
   gap: 0.8rem;
 }
-.selection img {
+article.selection img {
   width: 80px;
   border-radius: 50%;
 }
-.selection img:hover {
+article.selection img:hover {
   box-shadow: 0px 5px 20px var(--grey);
   cursor: pointer;
 }
