--- a/js14_dom-prosject/index.css
+++ b/js14_dom-prosject/index.css
@@ -34,7 +34,7 @@ main.container {
 }
 
 /** --------- SCORE-CARD --------- */
-.score-card {
+section.score-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -70,11 +70,11 @@ article.selection {
   display: flex;
   gap: 0.8rem;
 }
-article.selection img {
+.selection img {
   width: 80px;
   border-radius: 50%;
 }
-article.selection img:hover {
+.selection img:hover {
   box-shadow: 0px 5px 20px var(--grey);
   cursor: pointer;
 }
@@ -105,7 +105,7 @@ article.choices {
 }
 
 /** --------- MODAL-CARD --------- */
-.modal-card {
+section.modal-card {
   display: none;
   width: 90%;
 }
@@ -119,7 +119,7 @@ article.choices {
   justify-content: center;
   color: white;
 }
-.modal {
+article.modal {
   background-color: var(--red);
   text-align: center;
   padding: 2rem 3rem;
