--- a/30 days 30 project/day1/style.css
+++ b/30 days 30 project/day1/style.css
@@ -76,14 +76,7 @@ gap: 5px;
     margin-left: 60px !important;
   
     }
-​
     /* RESPONSİVE */
-    @media only screen and (max-width: 1200px){
-        
-      }
-      @media only screen and (max-width: 600px){
-       
-      }
-      @media only screen and (max-width: 425px){
-​
-      }
+    @media only screen and (max-width: 1200px){}
+     @media only screen and (max-width: 600px){}
+    @media only screen and (max-width: 425px){}
