--- a/UDEMY PROJECTS/DAY1/styl.css
+++ b/UDEMY PROJECTS/DAY1/styl.css
@@ -1,6 +1,19 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Rajdhani:wght@400;500;700&family=Roboto&family=Roboto+Slab&display=swap');
+
+body{
+
+ font-family:'Roboto', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  overflow: hidden;
+
+* {
 
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    
 }
