--- a/UDEMY PROJECTS/DAY1/styl.css
+++ b/UDEMY PROJECTS/DAY1/styl.css
@@ -25,7 +25,7 @@ body{
 
 .panel {
 
-background-size: cover;
+background-size:cover;
 background-position: center;
 background-repeat: no-repeat;
 height: 80vh;
@@ -39,7 +39,7 @@ transition: flex 0.7s ease-in;
 
 }
 
-.panel h3{
+.panel h2{
 
 font-size: 24px;
 position: absolute;
@@ -55,16 +55,16 @@ opacity: 0;
     flex: 5;
 }
 
-.panel.active h3 {
+.panel.active h2 {
 
     opacity: 1;
     transition: opacity 0.3s ease-in 0.4s;
 }
 
-@media(max-width): 480px{
+ @media(max-width: 480px) {
 
     .container{
-        width: 100vw;
+    width: 100vw;
 
     }
     .panel:nth-of-type(4),.panel:nth-of-type(5) {
