--- a/UDEMY PROJECTS/day2/style.css
+++ b/UDEMY PROJECTS/day2/style.css
@@ -7,7 +7,8 @@
 }
 
 *{
-
+   margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -117,3 +118,27 @@ background-color: var(--line-border-empty);
 cursor: not-allowed
 
    }
+
+   .btn1 {
+    text-align: center;
+    margin: 1rem;
+  
+    & button {
+      background-color: forestgreen;
+      color: yellow;
+      border: 2px solid gray;
+      border-radius: 5px;
+      padding: 5px 5px;
+      font-size: 1.3rem;
+      width: 150px;
+      transition: all 1.8s;
+  
+      &:hover {
+        transition: all 2s;
+        background-color: var(--line-border-fill);
+        border-radius: 30px;
+        color: white;
+        width: 250px;
+      }
+    }
+  }
