--- a/UDEMY PROJECTS/day2/style.css
+++ b/UDEMY PROJECTS/day2/style.css
@@ -28,16 +28,19 @@ background-color: #f6f7fb;
    .container{
 
     text-align: center;
+    
    }
 
    .progress-container{
 
     display: flex;
+   
     justify-content: space-between;
     position: relative;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     max-width: 100%;
     width: 350px;
+    margin: auto;
    }
 
    .progress-container::before{
@@ -47,7 +50,7 @@ background-color: #f6f7fb;
     top: 50%;
     left: 0;
     transform: translateY(-50%);
-    height: 4px;
+    height: 8px;
     width: 0%;
     z-index: -1;
    
@@ -122,6 +125,7 @@ cursor: not-allowed
    .btn1 {
     text-align: center;
     margin: 1rem;
+    
   
     & button {
       background-color: forestgreen;
@@ -130,7 +134,8 @@ cursor: not-allowed
       border-radius: 5px;
       padding: 5px 5px;
       font-size: 1.3rem;
-      width: 150px;
+      width: 250px;
+      height: 50px;
       transition: all 1.8s;
   
       &:hover {
@@ -138,7 +143,26 @@ cursor: not-allowed
         background-color: var(--line-border-fill);
         border-radius: 30px;
         color: white;
-        width: 250px;
+        width: 150px;
       }
     }
+  }
+
+  .footer {
+    position: fixed;
+    bottom: 0;
+    background-color: #f2f2f2;
+    line-height: 40px;
+    width: 100vw;
+    
+    
+  }
+  
+  .link {
+
+float: right;
+
+
+ 
+
   }
