--- a/UDEMY PROJECTS/day2/style.css
+++ b/UDEMY PROJECTS/day2/style.css
@@ -34,13 +34,13 @@ background-color: #f6f7fb;
    .progress-container{
 
     display: flex;
-   
     justify-content: space-between;
     position: relative;
     margin-bottom: 50px;
+    margin-left: 25%;
     max-width: 100%;
     width: 350px;
-    margin: auto;
+    
    }
 
    .progress-container::before{
@@ -78,8 +78,8 @@ background-color: #f6f7fb;
  background-color: white;
 color: #999;
 border-radius: 50%;
-height:30px ;
-width: 30px;
+height:50px ;
+width: 50px;
 display: flex;
 align-items: center;
 justify-content: center;
@@ -103,6 +103,7 @@ transition: .4s ease;
     padding: 8px 30px;
     margin: 5px;
     font-size: 14px;
+    
 
    }
 
@@ -124,7 +125,7 @@ cursor: not-allowed
 
    .btn1 {
     text-align: center;
-    margin: 1rem;
+    margin: auto;
     
   
     & button {
