--- a/UDEMY PROJECTS/day2/style.css
+++ b/UDEMY PROJECTS/day2/style.css
@@ -33,13 +33,12 @@ background-color: #f6f7fb;
 
    .progress-container{
 
-    display: flex;
-    justify-content: space-between;
+    gap: 20px;
+    justify-content: center;
     position: relative;
     margin-bottom: 50px;
-    margin-left: 25%;
     max-width: 100%;
-    width: 350px;
+    
     
    }
 
