--- a/UDEMY PROJECTS/day2/style.css
+++ b/UDEMY PROJECTS/day2/style.css
@@ -33,12 +33,14 @@ background-color: #f6f7fb;
 
    .progress-container{
 
-    gap: 20px;
-    justify-content: center;
+    display: flex;
+    gap: 55px;
+    justify-content:center;
     position: relative;
     margin-bottom: 50px;
+    margin-left: 25%;
     max-width: 100%;
-    
+    width: 350px;
     
    }
 
@@ -154,15 +156,17 @@ cursor: not-allowed
     background-color: #f2f2f2;
     line-height: 40px;
     width: 100vw;
-    
+   
     
   }
   
   .link {
 
 float: right;
-
-
- 
+display: flex;
+gap: 20px;
+flex-direction: row;
+padding: 1rem;
+margin-right: 195px;
 
   }
