--- a/UDEMY PROJECTS/day3/style.css
+++ b/UDEMY PROJECTS/day3/style.css
@@ -22,7 +22,7 @@ body{
     transform-origin:  top left;
     transition: transform 0.5s linear;
     width: 100vw;
-    min-height: 100vw;
+    min-height: 100vh;
     padding: 50px;
 
    }
@@ -50,8 +50,17 @@ body{
     transition: transform 0.5s linear;
    }
 
+
+   .container.show-nav .circle {
+
+    transform: rotate(-70deg);
+   }
+
+
+
+
    .circle button {
-cursor: pointer;
+    cursor: pointer;
     position: absolute;
     top :50%;
     left:50% ;
@@ -78,7 +87,11 @@ cursor: pointer;
     transform: rotate(90deg);
     transform-origin: top left;
    }
+.container.show-nav + nav li {
 
+    transform: translateX(0);
+    transition-delay: 0.3s;
+}
 
    nav {
 position: fixed;
@@ -99,7 +112,7 @@ nav ul li {
 text-transform: uppercase;
 color: #fff;
 margin: 40px 0;
-transform: translate(-100%);
+transform: translateX(-100%);
 transition: transform 0.4s ease-in;
 }
 
@@ -114,14 +127,14 @@ margin-right: 10px;
 nav ul li + li  {
 
 margin-left: 15px;
-transform: translate(-150%);
+transform: translateX(-150%);
 
 }
 
 nav ul li + li + li {
 
     margin-left: 30px;
-    transform: translate(-200%);
+    transform: translateX(-200%);
 
     
     }
@@ -139,7 +152,7 @@ nav ul li + li + li {
     margin: 0;
    }
 
-   .content small{
+   .content small {
 
     color: #555;
     font-style: italic;
