--- a/UDEMY PROJECTS/day3/style.css
+++ b/UDEMY PROJECTS/day3/style.css
@@ -1,18 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 
-*{
+*  {
   
     box-sizing: border-box;
 }
 
 
-body{
+body {
 
     font-family:'Lato', sans-serif;
      background-color: #333;
      color: #222;
      overflow-x: hidden;
      margin: 0;
+    
      
    }
    
@@ -27,7 +28,7 @@ body{
 
    }
 
-   .container.show-nav{
+   .container.show-nav {
 
     transform: rotate(-20deg);
    }
@@ -82,11 +83,11 @@ body{
    }
 
    .circle button#close {
-
     top: 60%;
     transform: rotate(90deg);
     transform-origin: top left;
    }
+
 .container.show-nav + nav li {
 
     transform: translateX(0);
@@ -110,10 +111,14 @@ z-index: 100;
 nav ul li {
 
 text-transform: uppercase;
-color: #fff;
+color:#fff;
 margin: 40px 0;
 transform: translateX(-100%);
 transition: transform 0.4s ease-in;
+}
+nav ul li a { 
+
+    color: #fff;
 }
 
 nav ul li i {
@@ -137,6 +142,19 @@ nav ul li + li + li {
     transform: translateX(-200%);
 
     
+    nav a{
+
+        color: #fafafa;
+        text-decoration: none;
+        transition: all 0.5s;
+    }
+    nav a:hover {
+
+
+        color: #FF7979;
+        font-weight: bold;
+    }
+
     }
    .content img {
     max-width: 100%;
