--- a/UDEMY PROJECTS/day5/style.css
+++ b/UDEMY PROJECTS/day5/style.css
@@ -1,4 +1,38 @@
-@import url('https://fonts.googleapis.com/css?family=ubuntu');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
 
 
-*
+
+*{
+
+    box-sizing: border-box;
+    
+}
+
+body{
+font-family: 'Ubuntu', sans-serif;
+display: flex;
+align-items: center;
+justify-content: center;
+height: 100vh;
+overflow: hidden;
+margin: 0;
+
+}
+
+.bg {
+
+ background: url(https://upload.wikimedia.org/wikipedia/commons/b/b2/Adolph_Tidemand_%26_Hans_Gude_-_Bridal_Procession_on_the_Hardangerfjord_-_Google_Art_Project.jpg) no-repeat center center/cover; 
+    position: absolute;
+    top:0 ;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: -1;
+    filter: blur(70px);
+}
+
+.loading-text {
+
+    font-size: 50px;
+    color: #fff;
+}
