norwegian national romatic

--- a/UDEMY PROJECTS/day5/style.css
+++ b/UDEMY PROJECTS/day5/style.css
@@ -23,12 +23,12 @@ margin: 0;
 
  background: url(https://upload.wikimedia.org/wikipedia/commons/b/b2/Adolph_Tidemand_%26_Hans_Gude_-_Bridal_Procession_on_the_Hardangerfjord_-_Google_Art_Project.jpg) no-repeat center center/cover; 
     position: absolute;
-    top:0 ;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    top:-30px ;
+    left: -30px;
+    width: calc(100vw + 60px);
+    height:calc(100vh + 60px) ;
     z-index: -1;
-    filter: blur(70px);
+    filter: blur(0px);
 }
 
 .loading-text {
